[tool.poetry]
name = "my_krml_25506751"
version = "0.1.0"
description = "A small ML utilities package for data processing and evaluation."
authors = ["Parth T"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.2"
scikit-learn = "1.5.1"


[tool.poetry.dev-dependencies]
pytest = "8.2.2"
jupyterlab = "4.2.3"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
