[tool.poetry]
name = "my_krml_25506751"
version = "2025.0.8.0"
description = "A small ML utilities package for data processing and evaluation."
authors = ["Parth T"]
license = "None"
readme = "README.md"

# ✅ correct syntax for src/ layout
packages = [{ include = "my_krml_25506751", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = ">=2.2,<3.0"
scikit-learn = ">=1.5,<2.0"
numpy = ">=1.26,<3.0"
scipy = ">=1.10,<2.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
jupyterlab = "4.2.3"
ipykernel = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
